# mcu-robot-principal

./: CMakeLists.txt  README.md  STM32L476XX_FLASH.ld  mcu-robot-principal.ioc  stm32l4x6.svd
App_Logic/: CMakeLists.txt
App_Logic/Inc/: pid_controller.h  robot_config.h  robot_types.h
App_Logic/Src/: pid_controller.c
Core/Inc/: FreeRTOSConfig.h  main.h
Core/Src/: main.c  stm32l4xx_hal_msp.c
Drivers_Custom/: CMakeLists.txt
Drivers_Custom/Inc/: dc_motor.h  encoder.h  servo.h
Drivers_Custom/Src/: dc_motor.c  encoder.c  servo.c
Tasks/: CMakeLists.txt
Tasks/Inc/: send_speed_task.h  straight_run_task.h
Tasks/Src/: send_speed_task.c  straight_run_task.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
